# phoenix_engine

./: .gitignore  Cargo.toml  LICENSE  README.md
app/: Cargo.toml
app/src/: main.rs
assets/stand-alone shaders/: bulb.frag
core/: Cargo.toml
core/src/: lib.rs  logging.rs  renderer.rs  scene.rs  shaders.rs
core/src/shaders/: shader.frag  shader.vert
deprecated_app_1/: Cargo.toml
deprecated_app_1/src/: main.rs
deprecated_engine_1/app/: Cargo.toml
deprecated_engine_1/core/: Cargo.toml
deprecated_engine_2/phoenix_app/: Cargo.toml
deprecated_engine_2/phoenix_core/: Cargo.toml
deprecated_engine_2/phoenix_core/plugins/: plugins.rs
deprecated_engine_2/phoenix_core/src/: core.rs  lib.rs
deprecated_engine_2/phoenix_core/src/assets/: loader.rs
deprecated_engine_2/phoenix_core/src/debugger/: debugger.rs
deprecated_engine_2/phoenix_core/src/ecs/: components.rs
deprecated_engine_2/phoenix_core/src/graphics/: mesh.rs  shaders.rs
deprecated_engine_3/phoenix_app/: Cargo.toml
deprecated_engine_3/phoenix_core/: Cargo.toml
docs/: README.md
docs/logs/: 1.md
phoenix/: Cargo.toml
phoenix/src/: main.rs
phoenix_app/: Cargo.toml  package.json
phoenix_app/src/: config.rs  editor.css  editor.js  index.html  main.js  main.rs  styles.css
phoenix_app/src-tauri/: Cargo.toml  tauri.conf.json
phoenix_core/: Cargo.toml
phoenix_core/src/: core.rs  lib.rs
phoenix_core_old/: Cargo.toml
projects/minecraft_2/: Cargo.toml
projects/minecraft_2/assets/models/: scene.gltf
projects/minecraft_2/assets/stand-alone shaders/: bulb.vert
projects/minecraft_2/shaders/: fragment.glsl  ground.frag  no_textures.frag  no_textures.vert  simple.vert
projects/minecraft_2/src/: main.rs
shaders/: ground.frag  ground.vert  simple.frag  vertex.glsl
src/: lib.rs
(+94 files in other folders)
