[package]
name = "minecraft_2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
cgmath = "0.18.0"
chrono = "0.4.39"
colored = "2.1.0"
futures = "0.3.31"
gl = "0.14.0"
glfw = "0.59.0"
gltf = "1.4.1"
image = "0.25.5"
rayon = "1.10.0"
tokio = { version = "1.42.0", features = ["full"] }
phoenix_core = { path = "Z:/dev/phoenix/phoenix_engine/phoenix_core" }

[build]
rustflags = ["-Awarnings"]
